--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             </button>
         </div>
     </section>
+    <div id="typeButtons"></div>
 
+    
     <!-- Nosso JS -->
     <script src="assets/js/pokemon-model.js"></script>
     <script src="assets/js/pokeapi.js"></script>
